# forradia_world

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
resources/Images/SceneGraphics/: ForradiaWorldLogo.png~
src/: Main.cpp  main.cpp
src/Common/: CanvasUtilities.cpp  FileUtilities.cpp  FileUtilities.hpp  SDLDeleter.cpp  StringUtilities.cpp
src/Common/MathLibrary/: Point.hpp  Size.hpp
src/Core/: Game.cpp
src/Core/Assets/: ImageLoader.cpp  ImageLoader.hpp
src/Core/CoreGameObjects/: Player.cpp  Player.hpp
src/Theme0/: RunNewTheme0.cpp  RunNewTheme0.hpp  Theme0.cpp  Theme0.hpp
src/Theme0.Core/: Game.cpp  Game.hpp
src/Theme0.Core.Assist/: IScene.cpp  IScene.hpp  MouseButton.cpp  MouseButton.hpp
src/Theme0.Core.Common/: CanvasUtilities.cpp  CanvasUtilities.hpp  CanvasUtils.cpp  CanvasUtils.hpp  FileUtilities.cpp  FileUtilities.hpp  FileUtils.cpp  FileUtils.hpp  Hash.cpp  Hash.hpp  MathLib.hpp  MathLibrary.hpp  MouseUtilities.cpp  MouseUtilities.hpp  MouseUtils.cpp  MouseUtils.hpp  SDLDeleter.cpp  SDLDeleter.hpp  Singleton.hpp  StringUtilities.cpp  StringUtilities.hpp  StringUtils.cpp  StringUtils.hpp  Utils.cpp  Utils.hpp
src/Theme0.Core.Common.MathLibrary/: Point.hpp  PointF.hpp  RectF.hpp  Size.hpp  SizeF.hpp
src/Theme0.Core.Configuration/: GameProperties.hpp
src/Theme0.Core.Devices/: EngineDevice.cpp  EngineDevice.hpp  HeroDevice.cpp  HeroDevice.hpp  ImageDrawDevice.cpp  ImageDrawDevice.hpp  ImageLoadDevice.cpp  ImageLoadDevice.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp  KeyboardInputDevice.cpp  KeyboardInputDevice.hpp  MouseDevice.cpp  MouseDevice.hpp  MouseInputDevice.cpp  MouseInputDevice.hpp  PlayerDevice.cpp  PlayerDevice.hpp  SDLDevice.cpp  SDLDevice.hpp  ScenesDevice.cpp  ScenesDevice.hpp  SettingsDevice.hpp
src/Theme0.Core.World/: Animal.cpp  Animal.hpp  Creature.cpp  Creature.hpp  Everything.hpp  Tile.hpp  World.cpp  World.hpp  WorldArea.cpp  WorldArea.hpp
src/Theme0.Scenes/: IntroScene.cpp  IntroScene.hpp  MainScene.cpp  MainScene.hpp  SceneNames.hpp  WorldGenerationScene.cpp  WorldGenerationScene.hpp
src/Theme0.ScenesLogic/: ClearWithGrass.cpp  ClearWithGrass.hpp  ClearWorldWithGrass.cpp  ClearWorldWithGrass.hpp  GenerateAnimalsForWorld.cpp  GenerateAnimalsForWorld.hpp  GenerateNewWorld.cpp  GenerateNewWorld.hpp  GenerateObjects.cpp  GenerateObjects.hpp  GenerateObjectsForWorld.cpp  GenerateObjectsForWorld.hpp  GenerateWater.cpp  GenerateWater.hpp  GenerateWaterForWorld.cpp  GenerateWaterForWorld.hpp  TileGridMath.cpp  TileGridMath.hpp  TileHovering.cpp  TileHovering.hpp  UpdateAnimalsMovement.cpp  UpdateAnimalsMovement.hpp  UpdateHeroKeyboardMovement.cpp  UpdateHeroKeyboardMovement.hpp  UpdateHeroMouseMovement.cpp  UpdateHeroMouseMovement.hpp  UpdatePlayerKBMovement.cpp  UpdatePlayerKBMovement.hpp  UpdatePlayerMouseMovement.cpp  UpdatePlayerMouseMovement.hpp  UpdatePlayerMovement.cpp  UpdatePlayerMovement.hpp  WorldView.cpp  WorldView.hpp
src/Theme1/: Theme1.cpp  Theme1.hpp
src/Theme1.Core.Assist/: IScene.cpp  IScene.hpp  MouseButton.cpp  MouseButton.hpp
src/Theme1.Core.Common/: Enums.hpp  Layout.hpp  MathLib.hpp  Utils.cpp  Utils.hpp
src/Theme1.Core.Devices/: EngineDevice.cpp  EngineDevice.hpp  FPSCounterDevice.cpp  FPSCounterDevice.hpp  HeroDevice.cpp  HeroDevice.hpp  ImageDrawDevice.cpp  ImageDrawDevice.hpp  ImageLoadDevice.cpp  ImageLoadDevice.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp  MouseDevice.cpp  MouseDevice.hpp  ObjectIndexDevice.cpp  ObjectIndexDevice.hpp  SDLDevice.cpp  SDLDevice.hpp  ScenesDevice.cpp  ScenesDevice.hpp  ScenesServiceDevice.cpp  ScenesServiceDevice.hpp  SettingsDevice.hpp  TextDrawDevice.cpp  TextDrawDevice.hpp
src/Theme1.Core.GUI/: GUIComponent.hpp
src/Theme1.Core.Inheritable/: IScene.cpp  IScene.hpp
src/Theme1.Core.World/: Animal.hpp  Creature.cpp  Creature.hpp  Enemy.cpp  Enemy.hpp  Everything.hpp  Tile.hpp  World.cpp  World.hpp  WorldArea.cpp  WorldArea.hpp
src/Theme1.Scenes/: IntroScene.cpp  IntroScene.hpp  MainScene.cpp  MainScene.hpp  SceneNames.hpp  WorldGenerationScene.cpp  WorldGenerationScene.hpp
src/Theme1.ScenesLogic/: GenerateNewWorld.cpp  GenerateNewWorld.hpp  TileGridMath.cpp  TileGridMath.hpp  TileHovering.cpp  TileHovering.hpp  TileHoveringService.cpp  TileHoveringService.hpp  UpdateAnimalsMovement.cpp  UpdateAnimalsMovement.hpp  UpdateHeroKeyboardMovement.cpp  UpdateHeroKeyboardMovement.hpp  UpdateHeroMouseMovement.cpp  UpdateHeroMouseMovement.hpp  WorldView.cpp  WorldView.hpp  WorldViewService.cpp  WorldViewService.hpp
src/common/: Hash.cpp  Hash.hpp  SDLDeleter.cpp  SDLDeleter.hpp  Singleton.hpp
src/core/: Game.cpp  Game.hpp
src/theme_0/: RunNewTheme0.cpp  RunNewTheme0.hpp
(+38 files in other folders)
